# rust-connect-four

./: .gitignore  PLAN.MD  README.MD  README.md  RUN.md
.github/workflows/: build.yml
connection-testing/: Cargo.toml
constants/: README.md
docs/: 404.html  board-f3940a99611e254d.css  column-5a931deb1526e904.css  index.html  interface-7b1c00f1f8bc80a.css  interface-d1c2bb20c9f68517.css  other-4c06cfc7a200df09.css  yew-app-105ab2c0c3fdb6c8.js  yew-app-105ab2c0c3fdb6c8_bg.wasm  yew-app-1c219a32c5c7fc68.js  yew-app-1c219a32c5c7fc68_bg.wasm  yew-app-253a08fa83750759.js  yew-app-253a08fa83750759_bg.wasm  yew-app-445ad7c416e9df7d.js  yew-app-445ad7c416e9df7d_bg.wasm  yew-app-45379f53ddc77da5.js  yew-app-478f5935142cefe5.js  yew-app-478f5935142cefe5_bg.wasm  yew-app-4d8323a5a040fecb.js  yew-app-4d8323a5a040fecb_bg.wasm  yew-app-5055a53a1dc1e5a5.js  yew-app-5055a53a1dc1e5a5_bg.wasm  yew-app-50b95f62c2a6c5b1.js  yew-app-50b95f62c2a6c5b1_bg.wasm  yew-app-56753027aa840b37.js  yew-app-56753027aa840b37_bg.wasm  yew-app-64f2b8120c72f96.js  yew-app-64f2b8120c72f96_bg.wasm  yew-app-6977242fdd6f5ddb.js  yew-app-6977242fdd6f5ddb_bg.wasm  yew-app-71363257545030e1.js  yew-app-71363257545030e1_bg.wasm  yew-app-737f8fcd8179eb23.js  yew-app-737f8fcd8179eb23_bg.wasm  yew-app-748dbc574cfb159b.js  yew-app-748dbc574cfb159b_bg.wasm  yew-app-76a4c464108f8c5f.js  yew-app-76a4c464108f8c5f_bg.wasm  yew-app-77ab121aa0731a0a.js  yew-app-77ab121aa0731a0a_bg.wasm  (+32 more)
server/: Cargo.toml  README.md  build.rs.txt  build.txt
server/cpplib/: board.hpp  safe_board.cc
server/src/: bindings.rs  connection.rs  constants.rs  lobby.rs  main.rs  tlsclient.rs
server/src/lobby/: client_handler.rs  lobby.rs  mod.rs  util.rs
yew-app/: Cargo.toml  README.md  index.html  test.html
yew-app/src/: constants.rs  main.rs  router.rs
yew-app/src/ai/: ai.rs  mod.rs  perfect.rs  perfect_helper.rs  position_lookup_table.rs  random.rs  util.rs
yew-app/src/ai/impls/: brute_force.rs  brute_force_helper.rs  mod.rs  perfect.rs  perfect_helper.rs  position_lookup_table.rs  random.rs
yew-app/src/components/: back_button.rs  board.rs  board_state.rs  column.rs  game_button.rs  game_control_buttons.rs  mod.rs  undo_button.rs  utility_bar.rs
yew-app/src/pages/: ai_select.rs  home.rs  lobby_select.rs  mod.rs
yew-app/src/util/: board_state.rs  disks.rs  mod.rs  net.rs  second_player_extension.rs  util.rs
yew-app/styles/: _base.sass  board.sass  column.sass  interface.sass  menu.sass  other.sass
(+2 files in other folders)
