[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [] # "cppintegration"]
cppintegration = []

[dependencies]
constants = { path = "../constants" }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.17.2"

# [build-dependencies]
# cc = "1.0.76"