[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [] # "cppintegration"]
cppintegration = []

[dependencies]
constants = { path = "../constants" }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-rustls = "0.23.4"
tokio-tungstenite = "0.17.2" # { version = "0.17.2", features = ["tls"]}
argh = "0.1.9"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"

# [build-dependencies]
# cc = "1.0.76"