[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use-certificate"] # "cppintegration"]
cppintegration = []
use-certificate = ["argh", "tokio-rustls", "rustls-pemfile"]

[dependencies]
constants = { path = "../constants" }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-rustls = { version = "0.23.4", optional = true }
tokio-tungstenite = "0.17.2" # { version = "0.17.2", features = ["tls"]}
argh = { version = "0.1.9", optional = true }
rustls-pemfile = { version = "1.0.1", optional = true }

# [build-dependencies]
# cc = "1.0.76"