[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constants = { path = "../constants" }
yew = { version="0.20.0", features = ["csr"] }
yew-router = { version="0.17.0" }
gloo = "0.8"
gloo-net = "0.2.4"
gloo-utils = "0.1.5"
futures = "0.3.25"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
tokio = { version = "1.21.2", features = ["sync"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"